<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/bg_">
    <ImageView
        android:id="@+id/img_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_login"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/tvForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/img_login"
        android:text="@string/formulir_pendaftaran"
        android:textStyle="bold"
        android:textSize="18sp"
        />
    <LinearLayout
        android:id="@+id/etContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/tvForm"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >
        <EditText
            android:id="@+id/etFullName"
            android:height="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_instansi"
            />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_instansi"
            android:layout_marginTop="5dp"
            android:height="48dp"
            />
        <EditText
            android:id="@+id/etKepsek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_kepala_sekolah"
            android:layout_marginTop="5dp"
            android:height="48dp"
            />
        <EditText
            android:id="@+id/etNipKepsek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nip_kepala_sekolah"
            android:layout_marginTop="5dp"
            android:height="48dp"
            />
        <EditText
            android:id="@+id/etKontakInstansi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kontak_hp_instansi"
            android:layout_marginTop="5dp"
            android:height="48dp"
            />
        <EditText
            android:id="@+id/etLogo"
            android:height="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/logo_instansi"
            android:layout_marginTop="5dp"
            />
        <EditText
            android:id="@+id/etAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:height="90dp"
            android:hint="@string/alamat_lengkap_instansi"
            />
    </LinearLayout>
    <Button
        android:id="@+id/regBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etContainer"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:width="350dp"
        android:background="@drawable/rounded_"
        />
</RelativeLayout>